--- a/css/rule_list.css
+++ b/css/rule_list.css
@@ -19,18 +19,9 @@ select.rule-behavior {
   vertical-align: middle;
 }
 
-.settings-list,
-.settings-list-empty {
+.rule-list {
   border: 1px solid #d9d9d9;
   border-radius: 2px;
-}
-
-.settings-list-empty {
-  background-color: #f4f4f4;
-  box-sizing: border-box;
-  min-height: 125px;
-  padding-left: 20px;
-  padding-top: 20px;
 }
 
 .pattern-column-header {
